# rustbook

./: 404.html  Cargo.toml  Debugging.html  README.md  acknowledgments.html  book.toml  chapter_1.html  debug_backend.html  debug_flags.html  ecosystem.html  future_work.html  fwd.html  index.html  installation.html  limitations.html  motivation.html  other_Frontends.html  print.html  prior_art.html  rev.html  rustc_design.html  searchindex.js  searchindex.json  toc.html  toc.js  unsafe.html  user_design.html
.github/workflows/: deploy.yml
integration/: Cargo.toml
integration/tests/: mod.rs
integration/tests/examples/: array.rs  bad_add.rs  box.rs  boxed.rs  broken_matvec.rs  cast_and_transmute.rs  enum.rs  enum1.rs  enum2.rs  enum3.rs  enum4.rs  foo.rs  hessian_sin.rs  io.rs  jed.rs  mod.rs  ndarray.rs  rosenbrock_fwd.rs  rosenbrock_fwd_iter.rs  rosenbrock_rev.rs  sin.rs  sqrt.rs  struct.rs  vec.rs
limitations/: comptime.html  higher.html  runtime.html  safety.html
samples/: Cargo.toml
samples-loose-types/: Cargo.toml
samples-loose-types/tests/: map_vs_loop.rs  mod.rs
samples/src/: lib.rs
samples/tests/: mod.rs
src/: Debugging.md  SUMMARY.md  acknowledgments.md  chapter_1.md  chapter_2.md  debug_backend.md  debug_flags.md  ecosystem.md  future_work.md  fwd.md  installation.md  limitations.md  motivation.md  other_Frontends.md  prior_art.md  rev.md  rustc_design.md  unsafe.md  user_design.md
src/limitations/: comptime.md  higher.md  runtime.md  safety.md
ui/: Cargo.toml
usage/: fwd.html  higher.html  python.html  rev.html  usage.html
(+19 files in other folders)
