[package]
name = "integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
samples = { version = "0.1.0", path = "../samples" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(broken)'] }
